updating swagger json, produto done. prisma migrate produto WIP.
